src/styles/ngx-bootstrap/_tables.scss
@import 'shared';

.table-content {
	overflow-x: auto;
}

.table {
	tr:last-child {
		td {
			border-bottom: 1px solid $border-color;
		}
	}
}

.card {
	.table {
		th {
			border-top: none;
		}

		&.table-striped tbody tr:nth-of-type(#{$table-striped-order}) {
			background-color: $ux-color-background;
		}
	}
}

.table-inline-editable,
.table-inline-edit {
	table-layout: fixed;

	td {
		&:first-child {
			font-weight: 500;
			padding-left: map-get($spacers, 4);
			white-space: nowrap;
			width: 30%;
			line-height: 36px;
		}

		& > span:not(.fa) {
			display: block;
			padding-left: 13px;
			padding-top: 8px;
			padding-bottom: 6px;
		}
	}
}

.table-inline-edit {
	td {
		.form-control,
		.input-group .btn {
			font-size: 0.875rem;
		}

		textarea {
			padding-top: calc(#{$input-btn-padding-y} + 1px);
		}

		.form-check-inline {
			margin-top: 7px;
		}
	}
}

@supports (position: sticky) {
	.inline-edit-header-btns {
		display: none;
	}
}

.inline-edit-btns {
	background: $ux-color-white;
	border-top: 1px solid $border-color;
	bottom: 2.5rem;
	margin-left: -1 * $card-spacer-x;
	padding: $table-cell-padding;
	padding-right: 2rem;
	position: sticky;
	width: calc(100% + #{$card-spacer-x} * 2);
	z-index: $zindex-sticky;
}

.card-body.editing {
	padding-bottom: 0;

	.table-inline-edit:last-of-type {
		margin-bottom: 0;
	}
}

